# bot-terminal

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml.example
docs/: telegram-bot-setup.md
src/: app.rs  config.rs  main.rs  terminal.rs
src/platform/: telegram.rs
