[package]
name = "bot-terminal"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
dotenvy = "0.15"
teloxide = "0.17"
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "process", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
